<resources>
    <string name="app_name">SPACED</string>
    <string name="facebook_application_id">3195364960713523</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="The_Moon">Moon</string>
    <string name="Uranus">Uranus</string>
    <string name="Mars">Mars</string>
    <string name="Mercury">Mercury</string>
    <string name="Venus">Venus</string>
    <string name="Jupiter">Jupiter</string>
    <string name="Saturn">Saturn</string>
    <string name="Neptune">Neptune</string>
    <string name="Eris">Eris</string>
    <string name="Pluto">Pluto</string>
    <string name="Makemake">Makemake</string>
    <string name="Ceres">Ceres</string>
    <string name="Moon_Price">$2999</string>
    <string name="Uranus_price">$3999</string>
    <string name="Mars_price">$5999</string>
    <string name="Mercury_price">$9999</string>
    <string name="Venus_price">$10,099</string>
    <string name="Jupiter_price">$4999</string>
    <string name="Saturn_price">$5999</string>
    <string name="Neptune_price">$7999</string>
    <string name="Eris_price">$8999</string>
    <string name="Pluto_price">$10,099</string>
    <string name="Makemake_price">$13,999</string>
    <string name="Ceres_price">$15,899</string>
    <string name="The_Moon_Description">An astronomical body that orbits planet Earth, being Earth\'s only permanent natural satellite. It is the fifth-largest natural satellite in the Solar System, and the largest among planetary satellites relative to the size of the planet that it orbits (its primary).</string>
    <string name="Uranus_Description">An astronomical body that orbits planet Earth, being Earth\'s only permanent natural satellite. It is the fifth-largest natural satellite in the SoUranus is similar in composition to Neptune, and both have different bulk chemical composition from that of the larger gas giants Jupiter and Saturn. For this reason, scientists often classify Uranus and Neptune as “ice giants” to distinguish them from the gas giants.</string>
    <string name="Mars_Description">Mars is the forth planet from the sun and the second-smallest planet in the solar system after Mercury. Mars is a terrestrial planet with a thin atmosphere, having surface features reminiscent both of the impact craters of the Moon and the valleys, deserts, and polar ice caps of Earth.</string>
    <string name="Mercury_Description">Mercury is the closest planet to the Sun at a distance of 57 million kilometers / 35 million miles. Out of all the terrestrial planets, Mercury is the smallest. It is also the smallest planet in the Solar System.</string>
    <string name="Venus_Description">Venus is the second planet from the Sun, and the sixth-largest planet in the Solar System. It is the only planet named after a female deity and the brightest planet in the Solar System. Venus and Mercury are the only planets in the Solar System that do not have a moon.</string>
    <string name="Jupiter_Description">Jupiter is the fifth planet from the Sun and the biggest planet of our Solar System. Some consider it a failed star since it is made out of swirling gases and liquids such as 90% hydrogen, and 10% helium – very similar to the Sun. Jupiter is the fourth brightest object in the sky and one of the five visible planets.</string>
    <string name="Saturn_Description">Saturn is the sixth planet from the Sun with the largest planetary rings in the Solar System. It is the second-largest planet in the Solar System after Jupiter with surface area 83 times greater than Earth. Saturn has a radius of 58.232 kilometers / 36.183 miles and a diameter of 120.536 km / 74.897 mi.</string>
    <string name="Neptune_Description">Neptune is the farthest planet from the Sun at an average distance of 4.5 billion kilometers / 2.8 billion miles. Neptune is the fourth-largest planet in the Solar System and the smallest of the gas giants. Both Neptune and Uranus are termed ice giants since they have different compositions than Saturn and Jupiter.</string>
    <string name="Ceres_Description">Ceres is the first dwarf planet to receive a visit from a spacecraft. It is the only dwarf planet located in the inner solar system. It does not have any moons or rings, and scientist believe that it also lacks a magnetosphere. It was first considered a planet, then it was demoted to asteroid, the first of its kind, and then it was classified as a dwarf planet.</string>
    <string name="Pluto_Description">Pluto is the ninth-largest and tenth most massive known object directly orbiting the Sun. However, when it comes to the trans-Neptunium objects, it is the largest by volume but less massive than Eris. It is named after the Roman god of the underworld, the equivalent of Hades in Greek mythology.</string>
    <string name="Makemake_Description">Makemake was the fourth dwarf planet to be discovered. This included Pluto who was reclassified. Makemake is about a fifth as bright as Pluto. It is dimmer than Pluto yet brighter than Eris.</string>
    <string name="Eris_Description">Eris is the most distant discovered dwarf planet from the Sun and has the greatest mass of the five dwarf planets. \n It was nicknamed Xena by the team, and later named Eris, after the ancient Greek goddess of discord and strife. The name fits since Eris remains at the center of a scientific debate about the definition of a planet. It also led to Pluto’s demotion from a planet to a dwarf planet.</string>
    <string name="Moon_climate">Temperatures vary from 140°C to −171°C, and cosmic rays.</string>
    <string name="Mars_climate">Temperature vary from -225°F to 95°F in equatorial summer</string>
    <string name="Uranus_climate">Uranus is known to have a bright south polar region.</string>
    <string name="Mercury_climate">Temperature ranges from 100 to 700 K(−173 to 427 °C).</string>
    <string name="Venus_climate">Temperatures is known to ranges around 465°C / 900°F.</string>
    <string name="Jupiter_climate">Temperature is known to vary from -145°C / -234°F</string>
    <string name="Saturn_climate">Temperature of Saturn’s atmosphere is on average about -175C(-285F)</string>
    <string name="Neptune_climate">Temperature of Neptune has an average temperature of -214°C. </string>
    <string name="Ceres_climate">Temperature of Ceres is about 235K / -36°F or minus 38°C.</string>
    <string name="Pluto_climate">Temperature of Pluto varies from -375 to -400°F or -226 to -240°C.</string>
    <string name="Makemake_climate">Temperature of Makemake is estimated to be around -239°C.</string>
    <string name="Eris_climate">Temperature of Eris varies between about −243.2 and −217.2°C. </string>
    <string name="Moon_physical">Covered with dead volcanoes, impact craters, and lava flows.</string>
    <string name="Mars_physical">Mars is approximately half the diameter of the earth</string>
    <string name="Uranus_physical">Uranus\'s mass is roughly 14.5 times that of earth.</string>
    <string name="Mercury_physical">Mercury is covered with craters of around 1.300km across.</string>
    <string name="Venus_physical">Venus consist of thin crust of rock and creates volcanoes.</string>
    <string name="Jupiter_physical">Jupiter does not surface, but it have a core about the size of Earth\'s</string>
    <string name="Saturn_physical">Saturn have a dense core in the center, composed of water, ice, and rock.</string>
    <string name="Neptune_physical">Neptune is basically a thick fog of water, ammonia, and methane.</string>
    <string name="Ceres_physical">Ceres is covered in small, young craters, no larger than 280 kilometers.</string>
    <string name="Pluto_physical">Pluto has a surface characterized of mountains, valleys and craters</string>
    <string name="Makemake_physical">Makemake appears red in the visible spectrum and redder than Eris.</string>
    <string name="Eris_physical">Eris is believed that it is largely composed of rocky materials</string>
    <string name="Leicester">Leicester Space Center</string>
    <string name="Toulouse">Toulouse Space Center</string>
    <string name="Noordwijk">Noordwijk Space Center</string>
    <string name="Washington">Washington Space Center</string>
    <string name="Wallasey">Wallasey Space Port</string>
    <string name="Transinne">Transinne Euro Space</string>
    <string name="Kennedy">Kennedy Space Center</string>
    <string name="Moon_fullDescription">The Moon, otherwise known as Luna, is the only natural satellite of Earth. It was created 4.6 billion years ago, and it is widely accepted that it was created when Earth collided with a planet-sized object called Theia. It’s the fifth-largest moon in our solar system and is the second brightest object in the sky (after the Sun).</string>
    <string name="Mars_fullDescription">Mars is widely known as the Red planet. Its reddish appearance is caused by the presence of rusty iron in the ground. The name of the month March is derived from Mars.Mars is visible to the naked eye, and as such, you can see it without the use of a telescope or binoculars. The Red planet is very similar to Earth, and scientists are trying to find out if life was present there.</string>
    <string name="Uranus_fullDescription">Though it is visible to the naked eye, Uranus escaped clear classification for decades. Generally mistaken for a star, it is speculated that Hipparchos might have recorded it first in 128 BC in his star catalogue. Later it was incorporated into Ptolemy’s Almagest.However, the earliest definite sighting was in 1690. John Flamsteed observed it six times, cataloguing it as 34 Tauri. Later it was observed for about fourteen-times by Charles Le Monnier between 1750 and 1769. The man who finally solved this elusive object was William Herschel who observed it on 13 March 1781 with a telescope.</string>
    <string name="Mercury_fullDescription">Mercury is named after the Roman god of commerce, travel, and thievery. In Greek mythology, Mercury was known as Hermes, the messenger of the gods. It probably received this name because it moves very quickly across the sky. Mercury is slightly bigger than Earth’s Moon, and it is also very similar in appearance to our Moon. Mercury itself doesn\’t have any moons. The planet can be seen without binoculars or telescopes, but since it is so near to the Sun, it may be hard to see in the early evening skies.</string>
    <string name="Venus_fullDescription">Venus is the second planet from the Sun and the sixth-largest. Together with Mercury, they are the only planets without a satellite, even though Mercury is closer to the sun, Venus is the hottest planet. It is theorized that Venus was formed about 4.5 billion years ago when gravity pulled swirling gas and dust together to form the second planet and it later settled into its current layout.</string>
    <string name="SPACED_content_across_web">This setting lets SPACED keep track of your visits to other websites that integrate SPACED content, such as embedded timelines. That information makes SPACED better for you, such as by personalizing your experience. This web browsing history will never be stored with your name email, or phone number.</string>
    <string name="personalizedIdentity">SPACED will always personalize your experience based on information you\'ve provided, as well as the devices you\'ve used to log in. When this setting is enabled, SPACED may also personalize based on other inferences about your identity, like devices and browsers you haven\'t used to log in to SPACED or email addresses and phone numbers similar to those linked to your SPACED account.</string>
    <string name="off_SPACED_description">Manage how SPACED uses your online activity outside of SPACED, such as the websites you visit, to personalize your experience.</string>
</resources>