<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent"
    android:background="@color/black"
    tools:context=".Moon_Activity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/slideViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </androidx.viewpager.widget.ViewPager>

    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:id="@+id/nav_view"
        android:layout_gravity="start"/>

    <!--
    <ImageView
        android:id="@+id/img_planet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:src="@drawable/moon_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        -->


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtView_planet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="90dp"
            android:fontFamily="@font/cutive_mono"
            android:text="@string/The_Moon"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtView_description"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtView_planet"
            android:layout_alignParentEnd="true"
            android:text="@string/The_Moon_Description"
            android:textColor="#757171"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/rel_features"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/description_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/btn_next"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/forward_icon" />

            <RelativeLayout
                android:id="@+id/rel_climate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/txtView_climate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="CLIMATE"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/txtView_climateText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtView_climate"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/Moon_climate"
                    android:textColor="#757171"
                    android:textSize="13sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_physical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_toRightOf="@id/rel_climate">

                <TextView
                    android:id="@+id/txtView_physical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="PHYSICAL"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtView_physicalText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtView_physical"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentBottom="true"
                    android:text="@string/Moon_physical"
                    android:textColor="#757171"
                    android:textSize="13sp" />


            </RelativeLayout>

        </RelativeLayout>


    </RelativeLayout>









</androidx.drawerlayout.widget.DrawerLayout>