<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/registeration_bg"
    tools:context=".Off_SPACED_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="14dp"
            android:src="@drawable/back_icon" />

        <TextView
            android:id="@+id/txtView_off_SPACED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Off-SPACED activity"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtView_Done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="Done"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off_SPACED_description"
                android:layout_gravity="center"
                android:layout_below="@+id/txtView_yourAccount"
                android:layout_marginTop="5dp"
                android:padding="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_white10_20"
                android:orientation="vertical"
                android:padding="15dp">

                <!--Allow use of where you can see SPACED content across the web-->
                <RelativeLayout
                    android:id="@+id/rel_ad_preferences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtView_ad_preferences"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Allow use of where you can see SPACED content across the web"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_toLeftOf="@+id/permission_switch"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtView_ad_preferences"
                        android:layout_marginTop="10dp"
                        android:layout_toLeftOf="@id/permission_switch"
                        android:text="@string/SPACED_content_across_web"
                        android:textSize="12dp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/permission_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:checked="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/greenSwitch"
                        tools:ignore="TouchTargetSizeCheck" />


                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_white10_20"
                android:orientation="vertical"
                android:padding="15dp">

                <!--Personalized based on your inferred identity-->
                <RelativeLayout
                    android:id="@+id/rel_personalizedIdentity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtView_personalizedIdentity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Personalize based on your inferred identity"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_toLeftOf="@+id/personalizedIdentity_switch"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtView_personalizedIdentity"
                        android:layout_marginTop="10dp"
                        android:layout_toLeftOf="@id/personalizedIdentity_switch"
                        android:text="@string/personalizedIdentity"
                        android:textSize="12dp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/personalizedIdentity_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:checked="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/greenSwitch"
                        tools:ignore="TouchTargetSizeCheck" />


                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>



</LinearLayout>